--- a/section8_bootstrap/startup/style.css
+++ b/section8_bootstrap/startup/style.css
@@ -3,10 +3,18 @@ html {
   width: 100%;
   height: 100%;
   font-family: 'Montserrat', sans-serif;
-  color: blue;
+  color: white;
+  text-align: center;
   background-color: black;
+  /* display: flex; tried this but it didn't do what I was expecting */
 }
 
 h1 {
   text-transform: uppercase;
+  padding: 100px;
+  /* justify-content: center; tried this but it didn't do what I was expecting*/
+}
+img{
+  width:100%;
+  Length:100%;
 }
