--- a/section9_css_grid+layout/css layout/project-start/style.css
+++ b/section9_css_grid+layout/css layout/project-start/style.css
@@ -1,8 +1,14 @@
+#navbar{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 3fr;
+  justify-self:start end;
+}
+
 .zone {
     padding:30px 50px;
     margin:40px 60px;
     cursor:pointer;
-    display:inline-block;
+    /* display:inline-block; */
     color:#FFF;
     font-size:2em;
     border-radius:4px;
