--- a/section9_css_grid+layout/css layout/project-start/style.css
+++ b/section9_css_grid+layout/css layout/project-start/style.css
@@ -1,12 +1,16 @@
 #navbar{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 3fr;
-  justify-self:start end;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));; /*1fr 1fr 1fr 3fr;*/
+  list-style: none;
+}
+
+#contact{
+  justify-self:end;
 }
 
 .zone {
-    padding:30px 50px;
-    margin:40px 60px;
+    /* padding:30px 50px;
+    margin:40px 60px; */
     cursor:pointer;
     /* display:inline-block; */
     color:#FFF;
@@ -14,6 +18,10 @@
     border-radius:4px;
     border:1px solid #bbb;
     transition: all 0.3s linear;
+}
+
+.red{
+  height:400px;
 }
 
 .zone:hover {
