--- a/section9_css_grid+layout/css layout/restart/style.css
+++ b/section9_css_grid+layout/css layout/restart/style.css
@@ -1,45 +1,14 @@
-.green {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 3fr;
-}
-
-
-#contact {
-  justify-self:end;
-}
-
 .zone {
     padding:30px 50px;
-    /* margin:40px 60px; */
+    margin:40px 60px;
     cursor:pointer;
-    /* display:inline-block; */
+    display:inline-block;
     color:#FFF;
     font-size:2em;
     border-radius:4px;
     border:1px solid #bbb;
     transition: all 0.3s linear;
 }
-
-.red {
-  display: grid;
-  height:400px;
-  align-items: center;
-  justify-items: center;
-}
-
-.box{
-  display:grid;
-  gap:90px;
-  grid-template-columns:repeat(auto-fill, minmax(350px, 1fr));
-  /* grid-template-rows: 1fr; */
-}
-
-.test{
-  background-color: #444;
-  padding:120px;
-  margin:20px;
-}
-
 
 .zone:hover {
     -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
