--- a/section9_css_grid+layout/files/style.css
+++ b/section9_css_grid+layout/files/style.css
@@ -2,14 +2,14 @@
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-template-rows: 1fr;
+  /* grid-template-rows: 1fr; */
 }
 
-.green{
+/* .green{
   grid-column: span 2;
   grid-row:1/3;
   justify-self: center;
-}
+} */
 
 .zone {
     cursor:pointer;
