--- a/section9_css_grid+layout/css layout/restart/style.css
+++ b/section9_css_grid+layout/css layout/restart/style.css
@@ -1,14 +1,59 @@
 .zone {
-    padding:30px 50px;
-    margin:40px 60px;
+    /* padding:30px 50px;
+    margin:40px 60px; */
     cursor:pointer;
-    display:inline-block;
+    /* display:inline-block; */
     color:#FFF;
     font-size:2em;
     border-radius:4px;
     border:1px solid #bbb;
     transition: all 0.3s linear;
 }
+
+/*nav*/
+
+nav{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 3fr;
+}
+
+#contact{
+  text-align: right;
+}
+
+/*Cover*/
+.cover{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height:500px;
+}
+
+/*grid*/
+.grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+  grid-gap: 20px;
+}
+
+/* .image{
+  background-color: #444;
+} */
+
+div > img{
+  height: 100px;
+  width: 100px;
+  padding:20px;
+  background-color: #444;
+}
+
+/* img{
+  height: 100px;
+  width: 100px;
+  padding:20px;
+  background-color: #444;
+} */
 
 .zone:hover {
     -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
