--- a/section9_css_grid+layout/css layout/restart/style.css
+++ b/section9_css_grid+layout/css layout/restart/style.css
@@ -1,3 +1,7 @@
+body{
+  margin:0px;
+}
+
 .zone {
     /* padding:30px 50px;
     margin:40px 60px; */
@@ -33,27 +37,26 @@ nav{
 /*grid*/
 .grid{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px,1fr));
   grid-gap: 20px;
 }
 
-/* .image{
+.image{
   background-color: #444;
-} */
-
-div > img{
-  height: 100px;
-  width: 100px;
-  padding:20px;
-  background-color: #444;
+  padding: 130px;
+  margin:20px;
 }
 
-/* img{
-  height: 100px;
-  width: 100px;
-  padding:20px;
-  background-color: #444;
-} */
+.image > img{
+  width: 100%;
+}
+
+/*Footer*/
+p{
+  text-align:center;
+}
+
+
 
 .zone:hover {
     -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
