--- a/section9_css_grid+layout/css layout/nice-code/style.css
+++ b/section9_css_grid+layout/css layout/nice-code/style.css
@@ -1,5 +1,6 @@
 body{
   margin: auto 0;
+  font-family: arial;
 }
 
 .zone {
@@ -22,6 +23,12 @@ body{
 }
 
 /*nav*/
+.sticky{
+  position: fixed;
+  top: 0;
+  width:100%;
+}
+
 .main-nav{
   display: flex;
   list-style: none;
@@ -55,6 +62,33 @@ a{
   align-items: center;
   justify-content: center;
   height: 50vh;
+  padding-top: 100px;
+}
+
+.cover{
+  height: 70%;
+}
+
+/*grid*/
+.grid-wrapper{
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(350px,1fr));
+}
+
+.box >img{
+  width: 100%;
+}
+
+.box{
+  background-color: #444;
+  padding:130px;
+  margin:20px;
+}
+
+/*footer*/
+footer{
+  text-align: center;
 }
 
 /*https://paulund.co.uk/how-to-create-shiny-css-buttons*/
