--- a/section24/smartbrain/src/Components/FaceRecognition/FaceRecognition.css
+++ b/section24/smartbrain/src/Components/FaceRecognition/FaceRecognition.css
@@ -6,3 +6,11 @@
   justify-content: center;
   cursor: pointer;
 }
+
+.dot {
+  position: absolute;
+  background-color: red;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+}
